tests/fixtures/cargo_build_errors.txt
Compiling omni v0.5.0
error[E0432]: unresolved import `std::collections`
 --> src/main.rs:1:5
  |
1 | use std::collections::Foo;
  |     ^^^^^^^^^^^^^^^^^^^^^ no `Foo` in `collections`

warning: unused import: `std::time::Instant`
 --> src/pipeline/mod.rs:5:5

error: could not compile `omni` due to 1 previous error
